[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foresure-forecast"
version = "0.1.0"
description = "Modular forecasting package"
requires-python = ">=3.8"

authors = [
    {name = "Douglas Davis", email = "doug@foresureanalytics.com"}]

dependencies = [
    "pandas",
    "numpy",
    "statsmodels",
    "scikit-learn",
    "typer",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[project.scripts]
foresure-forecast = "foresure_forecast.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
